# summon

./: .flake8  .gitignore  .pylintrc  LICENSE.md  README.md  pyproject.toml  tasks.py
.github/workflows/: summon.yml
summon/: __init__.py  __main__.py  _plugin_spec.py  _typer_app.py  error.py  exec.py  execute.py  plugins.py  project.py  tasks.py
tests/: test_error.py  test_exec.py  test_execute.py  test_plugin_spec.py  test_plugins.py  test_project.py  test_tasks.py
tests/test_exec/: executable.py
tests/test_exec/test_check_commands_task/: tasks.py
tests/test_exec/test_exit_task/: tasks.py
tests/test_execute/: executable.py
tests/test_tasks/test_exit_task/: tasks.py
tests/test_tasks/test_many_results_task/: tasks.py
tests/test_tasks/test_single_result_task/: tasks.py
