[tool.poetry]
name = "summon-tasks"
version = "0.1.0"
description = ""
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]
packages = [
    { include = "summon" },
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
pluggy = "^1.0.0"

[tool.poetry.scripts]
summon = "summon.__main__:main"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pylint = "^2.13.9"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8-bugbear = "^22.4.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
