[tool.poetry]
name = "summon-tasks"
version = "0.2.0"
description = ""
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "summon" },
]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.4.1"
pluggy = "^1.0.0"
typing-extensions = "^4.2.0"

[tool.poetry.scripts]
summon = "summon.__main__:main"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
pylint = "^2.13.9"
flake8 = "^4.0.1"
black = "^22.3.0"
isort = "^5.10.1"
flake8-bugbear = "^22.4.25"
summon-python = "^0.2.0"
pytest = "^7.1.2"
pytest-datadir = "^1.3.1"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"

[tool.summon.plugins.python]
test-modules = ["tests"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "pluggy"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
