[tool.poetry]
name = "summon-tasks"
version = "0.3.0"
description = ""
authors = ["Tarcísio Eduardo Moreira Crocomo <tarcisioe@pm.me>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "summon" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
typer = "^0.9.0"
pluggy = "^1.3.0"
typing-extensions = "^4.8.0"

[tool.poetry.scripts]
summon = "summon.__main__:main"

[tool.poetry.dev-dependencies]
mypy = "^1.5.1"
pylint = "^2.17.6"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
flake8-bugbear = "^23.9.16"
summon-python = "^0.2.0"
pytest = "^7.4.2"
pytest-datadir = "^1.4.1"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
pre-commit = "^3.4.0"

[tool.summon.plugins.python]
test-modules = ["tests"]

[tool.mypy]
strict = true

[[tool.mypy.overrides]]
module = "pluggy"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
